Gestione autostrada e multe completato (bug fix)

--- a/src/main/resources/static/autostrada.html
+++ b/src/main/resources/static/autostrada.html
@@ -8,34 +8,94 @@
   <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;600&display=swap" rel="stylesheet" />
   <link rel="stylesheet" href="css/styles.css">
   <style>
-    .breadcrumb-custom {
-      font-size: 0.9rem;
-    }
-    .breadcrumb-custom span {
-      color: var(--muted);
-    }
-    .breadcrumb-custom a {
-      text-decoration: none;
-      color: var(--accent);
-      cursor: pointer;
-    }
-    .breadcrumb-custom a:hover {
-      text-decoration: underline;
-    }
-    .level-title {
-      font-size: 0.9rem;
-      text-transform: uppercase;
-      letter-spacing: .08em;
-      color: var(--muted);
-    }
-    .list-group-item {
-      cursor: pointer;
-    }
-    .list-group-item.active-level {
-      background-color: var(--accent);
-      border-color: var(--accent);
-      color: #fff;
-    }
+.breadcrumb-custom {
+  font-size: 0.9rem;
+}
+
+.breadcrumb-custom span {
+  color: var(--muted);
+}
+
+.breadcrumb-custom a {
+  text-decoration: none;
+  color: var(--accent);
+  cursor: pointer;
+  font-weight: 500;
+}
+
+.breadcrumb-custom a:hover {
+  text-decoration: underline;
+}
+
+/* Titolo livello corrente */
+.level-title {
+  font-size: 0.9rem;
+  text-transform: uppercase;
+  letter-spacing: .08em;
+  color: var(--muted);
+}
+
+/* Barra livelli (list-group) */
+#levelList .list-group-item {
+  cursor: pointer;
+  border: 1px solid transparent;
+  padding: .45rem .75rem;
+  font-size: 0.85rem;
+  transition: background-color .15s ease, color .15s ease, border-color .15s ease;
+}
+
+/* Livello corrente */
+.list-group-item.active-level {
+  background-color: var(--accent);
+  border-color: var(--accent);
+  color: #fff;
+  font-weight: 600;
+}
+
+/* Livelli già superati: “corsia percorsa” */
+.list-group-item.visited-level {
+  background-color: #a5b4fc;   /* indaco chiaro ma vivo */
+  border-color: #818cf8;
+  color: #111827;              /* testo scuro per contrasto */
+}
+
+/* Livelli futuri (non ancora raggiunti) */
+#levelList .list-group-item:not(.active-level):not(.visited-level) {
+  background-color: transparent;
+  color: var(--muted);
+}
+
+/* Hover sugli elementi cliccabili (non current) */
+#levelList .list-group-item.visited-level:hover,
+#levelList .list-group-item:not(.active-level):hover {
+  background-color: #c7d2fe;   /* un gradino sopra ai visitati */
+  border-color: #818cf8;
+  color: #111827;
+}
+
+/* Card che contengono la barra livelli e la lista */
+.card.bg-white {
+  border: 1px solid #e5e7f5;
+  box-shadow: 0 4px 12px rgba(15, 23, 42, .04);
+}
+
+/* Lista elementi (autostrade, caselli, ecc.) */
+#itemsList .list-group-item {
+  border: 1px solid #e5e7f5;
+  margin-bottom: .4rem;
+  transition: background-color .12s ease, box-shadow .12s ease, transform .06s ease;
+}
+
+#itemsList .list-group-item:hover {
+  background-color: #f9fafb;
+  box-shadow: 0 2px 6px rgba(15, 23, 42, .06);
+  transform: translateY(-1px);
+}
+
+#itemsList .list-group-item strong {
+  font-weight: 600;
+}
+
   </style>
 </head>
 <body>
@@ -57,8 +117,11 @@
   <!-- Barra orizzontale dei livelli -->
   <div class="card bg-white p-3 mb-3">
     <ul class="list-group list-group-horizontal list-group-flush w-100" id="levelList">
-      <li class="list-group-item flex-fill text-center active-level" data-level="highways">
-        <strong>Autostrada</strong>
+      <li class="list-group-item flex-fill text-center active-level" data-level="regions">
+        <strong>Regione</strong>
+      </li>
+      <li class="list-group-item flex-fill text-center" data-level="highways">
+        <span class="text-muted">&gt;</span> Autostrada
       </li>
       <li class="list-group-item flex-fill text-center" data-level="tolls">
         <span class="text-muted">&gt;</span> Casello
@@ -70,8 +133,8 @@
         <span class="text-muted">&gt;</span> Dispositivi
       </li>
     </ul>
-    <div class="small-muted mt-2" id="pathSummary">
-      Seleziona un'autostrada per iniziare.
+    <div class="small-muted mt-2 breadcrumb-custom" id="pathSummary">
+      Seleziona una regione per iniziare.
     </div>
   </div>
 
@@ -79,7 +142,7 @@
   <div class="card bg-white p-3">
     <div class="d-flex justify-content-between align-items-center mb-2">
       <div>
-        <div class="level-title" id="levelTitle">AUTOSTRADE</div>
+        <div class="level-title" id="levelTitle">REGIONI</div>
       </div>
       <div id="status" class="small-muted"></div>
     </div>
@@ -117,8 +180,9 @@ document.addEventListener('DOMContentLoaded', function () {
     });
   }
 
-  // Stato corrente
+  // Stato corrente: aggiunta REGION
   const state = {
+    region: null,
     highway: null,
     toll: null,
     lane: null
@@ -128,29 +192,42 @@ document.addEventListener('DOMContentLoaded', function () {
   const statusEl    = document.getElementById('status');
   const levelTitle  = document.getElementById('levelTitle');
   const pathSummary = document.getElementById('pathSummary');
+  const levelList   = document.getElementById('levelList');
 
   function setStatus(msg) {
     statusEl.textContent = msg || '';
   }
 
-  function updatePathSummary() {
-    const parts = [];
-    if (state.highway) parts.push(state.highway.name);
-    if (state.toll)    parts.push(state.toll.name);
-    if (state.lane)    parts.push(state.lane.name);
-    pathSummary.textContent = parts.length
-      ? parts.join(' > ')
-      : "Seleziona un'autostrada per iniziare.";
-  }
+  // Attiva livello nella barra orizzontale
+ function setActiveLevel(level) {
+  const order = ['regions', 'highways', 'tolls', 'lanes', 'devices'];
 
-  function setActiveLevel(level) {
-    document.querySelectorAll('#levelList .list-group-item').forEach(li => {
-      li.classList.toggle('active-level', li.dataset.level === level);
-    });
-  }
+  const currentIndex = order.indexOf(level);
 
+  document.querySelectorAll('#levelList .list-group-item').forEach(li => {
+    const liLevel = li.dataset.level;
+    const liIndex = order.indexOf(liLevel);
+
+    // livello corrente
+    li.classList.toggle('active-level', liLevel === level);
+
+    // livelli precedenti come "visited"
+    if (liIndex !== -1 && liIndex < currentIndex) {
+      li.classList.add('visited-level');
+    } else {
+      li.classList.remove('visited-level');
+    }
+  });
+}
+
+
+  // Reset livelli sottostanti
   function resetBelow(level) {
-    if (level === 'highway') {
+    if (level === 'region') {
+      state.highway = null;
+      state.toll = null;
+      state.lane = null;
+    } else if (level === 'highway') {
       state.toll = null;
       state.lane = null;
     } else if (level === 'toll') {
@@ -158,52 +235,208 @@ document.addEventListener('DOMContentLoaded', function () {
     }
   }
 
+  // PATH SUMMARY: costruisce breadcrumb cliccabile
+// PATH SUMMARY: costruisce breadcrumb cliccabile
+function updatePathSummary() {
+  pathSummary.innerHTML = '';
+
+  // Se non è selezionato nulla
+  if (!state.region) {
+    pathSummary.textContent = "Seleziona una regione per iniziare.";
+    return;
+  }
+
+  const separator = document.createTextNode(' > ');
+
+  // Regione
+  if (state.region) {
+    const aRegion = document.createElement('a');
+    aRegion.textContent = state.region.name;
+    aRegion.addEventListener('click', () => {
+      // torno alla lista regioni
+      state.region = null;
+      state.highway = null;
+      state.toll = null;
+      state.lane = null;
+      loadRegions();
+      updatePathSummary();
+    });
+    pathSummary.appendChild(aRegion);
+  }
+
+  // Autostrada
+  if (state.highway) {
+    pathSummary.appendChild(separator.cloneNode());
+    const aHighway = document.createElement('a');
+    aHighway.textContent = state.highway.name;
+    aHighway.addEventListener('click', () => {
+      if (!state.region) return; // safety
+      resetBelow('region'); // tolgo autostrada e sotto
+      loadHighwaysForRegion(state.region.id);
+      updatePathSummary();
+    });
+    pathSummary.appendChild(aHighway);
+  }
+
+  // Casello
+  if (state.toll) {
+    pathSummary.appendChild(separator.cloneNode());
+    const aToll = document.createElement('a');
+    aToll.textContent = state.toll.name;
+    aToll.addEventListener('click', () => {
+      resetBelow('highway');
+      loadTollsForHighway(state.highway.id);
+      updatePathSummary();
+    });
+    pathSummary.appendChild(aToll);
+  }
+
+  // Corsia
+  if (state.lane) {
+    pathSummary.appendChild(separator.cloneNode());
+    const aLane = document.createElement('a');
+    aLane.textContent = state.lane.name;
+    aLane.addEventListener('click', () => {
+      resetBelow('toll');
+      loadLanesForToll(state.toll.id);
+      updatePathSummary();
+    });
+    pathSummary.appendChild(aLane);
+  }
+
+  // Livello finale "Dispositivi" solo testo (se siamo sui dispositivi)
+  const currentLevelLi = document.querySelector('#levelList .list-group-item.active-level');
+  if (currentLevelLi && currentLevelLi.dataset.level === 'devices') {
+    pathSummary.appendChild(separator.cloneNode());
+    const spanDevices = document.createElement('span');
+    spanDevices.textContent = 'Dispositivi';
+    pathSummary.appendChild(spanDevices);
+  }
+}
+
+
+  // Gestione click sulla barra dei livelli (torna a quel livello)
+  levelList.addEventListener('click', function (e) {
+    const li = e.target.closest('.list-group-item');
+    if (!li) return;
+    const level = li.dataset.level;
+
+    if (level === 'regions') {
+      state.region = null;
+      state.highway = null;
+      state.toll = null;
+      state.lane = null;
+      loadRegions();
+    } else if (level === 'highways' && state.region) {
+      resetBelow('region');
+      loadHighwaysForRegion(state.region.id);
+    } else if (level === 'tolls' && state.highway) {
+      resetBelow('highway');
+      loadTollsForHighway(state.highway.id);
+    } else if (level === 'lanes' && state.toll) {
+      resetBelow('toll');
+      loadLanesForToll(state.toll.id);
+    } else if (level === 'devices' && state.lane) {
+      loadDevicesForLane(state.lane.id);
+    }
+    updatePathSummary();
+  });
+
   // --- Caricamenti ---
 
-  // Autostrade
-  function loadHighways() {
-    setActiveLevel('highways');
-    levelTitle.textContent = 'AUTOSTRADE';
-    setStatus('Caricamento autostrade...');
+  // REGIONI
+  function loadRegions() {
+    setActiveLevel('regions');
+    levelTitle.textContent = 'REGIONI';
+    setStatus('Caricamento regioni...');
     itemsList.innerHTML = '';
 
-    fetch('/api/highways')
+    fetch('/api/regions')
       .then(res => {
         if (!res.ok) throw new Error('HTTP ' + res.status);
         return res.json();
       })
       .then(data => {
         if (!Array.isArray(data) || data.length === 0) {
-          setStatus('Nessuna autostrada trovata.');
+          setStatus('Nessuna regione trovata.');
           return;
         }
-        setStatus('Seleziona un\'autostrada per vedere i caselli.');
-        data.forEach(h => {
+        setStatus('Seleziona una regione per vedere le autostrade.');
+        data.forEach(r => {
           const li = document.createElement('li');
           li.className = 'list-group-item d-flex justify-content-between align-items-center';
-          const name = h.nome_autostrada || h.name || ('Autostrada ' + h.id);
+          const name = r.nome;
           li.innerHTML = `
             <div>
               <strong>${name}</strong>
-              <div class="small-muted">${h.nome_regione || h.regione || ''}</div>
             </div>
           `;
           li.addEventListener('click', () => {
-            state.highway = { id: h.id_autostrada || h.id, name };
-            resetBelow('highway');
+            state.region = { id: r.id_regione || r.id, name };
+            state.highway = null;
+            state.toll = null;
+            state.lane = null;
             updatePathSummary();
-            loadTollsForHighway(state.highway.id);
+            loadHighwaysForRegion(state.region.id);
           });
           itemsList.appendChild(li);
         });
       })
       .catch(err => {
-        console.error('Errore caricamento autostrade:', err);
-        setStatus('Errore nel caricamento delle autostrade.');
+        console.error('Errore caricamento regioni:', err);
+        setStatus('Errore nel caricamento delle regioni.');
       });
   }
 
-  // Caselli per autostrada
+  // AUTOSTRADE per regione
+  // AUTOSTRADE per regione
+function loadHighwaysForRegion(regionId) {
+  if (!regionId) return;
+  setActiveLevel('highways');
+
+  const regionName = state.region ? state.region.name : '';
+  levelTitle.textContent = 'AUTOSTRADE DI ' + regionName;
+
+  setStatus('Caricamento autostrade...');
+  itemsList.innerHTML = '';
+
+  fetch('/api/regions/' + encodeURIComponent(regionId) + '/highways')
+    .then(res => {
+      if (!res.ok) throw new Error('HTTP ' + res.status);
+      return res.json();
+    })
+    .then(data => {
+      if (!Array.isArray(data) || data.length === 0) {
+        setStatus('Nessuna autostrada trovata per questa regione.');
+        return;
+      }
+      setStatus('Seleziona un\'autostrada per vedere i caselli.');
+      data.forEach(h => {
+        const li = document.createElement('li');
+        li.className = 'list-group-item d-flex justify-content-between align-items-center';
+        const name = h.nome_autostrada || h.name || ('Autostrada ' + h.id);
+        li.innerHTML = `
+          <div>
+            <strong>${name}</strong>
+          </div>
+        `;
+        li.addEventListener('click', () => {
+          state.highway = { id: h.id_autostrada || h.id, name };
+          state.toll = null;
+          state.lane = null;
+          updatePathSummary();
+          loadTollsForHighway(state.highway.id);
+        });
+        itemsList.appendChild(li);
+      });
+    })
+    .catch(err => {
+      console.error('Errore caricamento autostrade:', err);
+      setStatus('Errore nel caricamento delle autostrade.');
+    });
+}
+
+  // CASELLI per autostrada
   function loadTollsForHighway(highwayId) {
     if (!highwayId) return;
     setActiveLevel('tolls');
@@ -234,7 +467,7 @@ document.addEventListener('DOMContentLoaded', function () {
           `;
           li.addEventListener('click', () => {
             state.toll = { id: t.id_casello || t.id, name };
-            resetBelow('toll');
+            state.lane = null;
             updatePathSummary();
             loadLanesForToll(state.toll.id);
           });
@@ -247,7 +480,7 @@ document.addEventListener('DOMContentLoaded', function () {
       });
   }
 
-  // Corsie per casello
+  // CORSIE per casello
   function loadLanesForToll(tollId) {
     if (!tollId) return;
     setActiveLevel('lanes');
@@ -290,7 +523,7 @@ document.addEventListener('DOMContentLoaded', function () {
       });
   }
 
-  // Dispositivi per corsia
+  // DISPOSITIVI per corsia
   function loadDevicesForLane(laneId) {
     if (!laneId) return;
     setActiveLevel('devices');
@@ -331,7 +564,7 @@ document.addEventListener('DOMContentLoaded', function () {
   }
 
   // Avvio
-  loadHighways();
+  loadRegions();
 });
 </script>
 
